# LinOllama

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  linollama.desktop  ollama-tray.desktop
src/: AutoHeightTextBrowser.cpp  AutoHeightTextBrowser.h  BuiltinTools.cpp  BuiltinTools.h  ChatInputEdit.cpp  ChatInputEdit.h  ChatQueue.cpp  ChatQueue.h  ChatWidget.cpp  ChatWidget.h  CodeHighlighter.cpp  CodeHighlighter.h  Conversation.h  ConversationListItemWidget.cpp  ConversationListItemWidget.h  ConversationStore.cpp  ConversationStore.h  EmojiRenderer.cpp  EmojiRenderer.h  HtmlEmbedWidget.cpp  HtmlEmbedWidget.h  MainWindow.cpp  MainWindow.h  MapEmbedWidget.cpp  MapEmbedWidget.h  OllamaClient.cpp  OllamaClient.h  ServerController.cpp  ServerController.h  SettingsDialog.cpp  SettingsDialog.h  StackOverflowSearchClient.cpp  StackOverflowSearchClient.h  StatsStripWidget.cpp  StatsStripWidget.h  SystemMonitor.cpp  SystemMonitor.h  Theme.cpp  Theme.h  ThemeManager.cpp  (+18 more)
